data/derived/comb/progs/unify/prog7158.ml.out
Characters 73-79:
  if n <> 0 then (n mod 10) :: return
                               ^^^^^^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
